--- a/Front/css/style.css
+++ b/Front/css/style.css
@@ -2,21 +2,15 @@ body{
     text-align: center;
 }
 
-
-a{
-    border-radius: 1px solid white;
-    padding: 10px 20px;
-    color: white;
-    background: black;
-    list-style: none;
-    text-decoration: none;
-    font-size: 1rem;
+.start{
+    width: 200px;
+    height: 70px;
+    color: black;
 }
 
-
-.sta{
-    background: red;
-    width: 80%;
-    height: 200px;
-    margin: auto auto;   
+.stop{
+    width: 200px;
+    height: 70px;
+    color: black;
+    
 }
